# ActIntegradora1

./: CMakeLists.txt  README.md  main.cpp  sonar-project.properties
.github/workflows/: buid.yml
tests/: test_buscarSubcadena.cpp  test_expandirCentro.cpp  test_lcs.cpp  test_leerArchivo.cpp  test_palindromoMasLargo.cpp
